update operate md file

--- a/_posts/2017-06-13-operate.md
+++ b/_posts/2017-06-13-operate.md
@@ -1,4 +1,8 @@
-#  操作步骤    
+
+---
+layout: default
+title: 操作步骤
+---
 
 *生成代码->pages*
 ``` 
@@ -10,3 +14,4 @@ git  add .
 git commit -m "msg"
 git remote add origin https://github.com/xinzhedeai/jekyll_demo_test.git
 git push origin gh-pages
+```
